@@ -2,12 +2,14 @@ name = RoleAssign
 description = Allows site administrators to further delegate the task of managing user's roles.
 core = 7.x
 
+files[] = roleassign.test
+
 configure = admin/people/permissions/roleassign
 
 
-; Information added by drupal.org packaging script on 2012-11-04
-version = "7.x-1.0"
+; Information added by Drupal.org packaging script on 2017-03-25
+version = "7.x-1.2"
 core = "7.x"
 project = "roleassign"
-datestamp = "1352043133"
+datestamp = "1490464686"
 
